[package]
name = "pgdevhub"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.16"
anyhow = "1.0"
url = "2.4"
thiserror = "1.0"
regex = "1.10.2"
chrono = "0.4"
const_format = "0.2.34"
phf = { version = "0.11.3", features = ["macros"] }
