[package]
name = "pgdevhub"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.16"
anyhow = "1.0"
url = "2.4"
thiserror = "1.0"
regex = "1.10.2"
chrono = { version = "0.4", features = ["serde"] }
const_format = "0.2.34"
phf = { version = "0.11.3", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
